Closed Bug 488287 Opened 16 years ago Closed 16 years ago

"playing" event not triggered after the first play

Categories

(Core :: Audio/Video, defect, P2)

1.9.1 Branch
x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9.1b4

People

(Reporter: paul, Assigned: kinetik)

References

()

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

The video element should trigger a "play" event when it starts playing. It works well with Firefox 3.1b3. The nightlies doesn't work well. If you play the video a second time, the event is not triggered if the play operation is done from the JS API (video.play()) or from the controls. But it works from the context menu. http://people.mozilla.com/~prouget/bugs/play_event.xhtml * load the page * click "video.play()" * an alert shows that the "play" event is triggered * wait the end of the video * click "video.play()" * the event is not triggered (but it is if you play the video from the context menu) and the video starts
Flags: blocking1.9.1?
"play" will only fire once, but "playing" should fire again when the media is replayed. The media cache landing changed this behaviour, because we have only ever triggered "playing" as part of reloading the media, which no longer happens with the media cache. There was some discussion about what the spec required, and the result of that is here: http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2009-March/019012.html
Summary: "play" event not triggered after the first play → "playing" event not triggered after the first play
Note that the mochitests were modified to account for the new media cache behaviour, so they should be changed back when this bug is fixed.
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P2
This one might be related with bug 490114.
Attached patch patch v0Splinter Review
Change readyState to HAVE_CURRENT_DATA once playback ends. Revert relevant tests back to how they were before bug 475441 landed.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #375940 - Flags: superreview?(roc)
Attachment #375940 - Flags: review?(roc)
Attachment #375940 - Flags: superreview?(roc)
Attachment #375940 - Flags: superreview+
Attachment #375940 - Flags: review?(roc)
Attachment #375940 - Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: