Bug 488287. When playback ends, readyState should change to HAVE_CURRENT_DATA. r=doublec,sr=roc

--HG--
extra : rebase_source : 535086630652a38d5f95d89cc8f93c208a636d2d